# cloud

./: README.md  my_metadata.xml  my_metadata1.xml  my_metadata2.xml  pyproject.toml
.github/workflows/: python-app.yml
cloud/: __init__.py  cloud_api.py  const.py
cloud/common/: aws.py
cloud/encryption/: aws.py  basic.py  extended_choices.py  local.py
cloud/logger/: aws.py  basic.py  local.py
cloud/secret_manager/: aws.py  basic.py  local.py
cloud/serverless/: aws.py  basic.py  local.py
cloud/storage/: aws.py  basic.py  local.py
cloud/tests/encryption/: test_aws.py
cloud/tests/storage/: test_aws.py
