[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["michalfrak <michal.frak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.36"
cryptography = "^37.0.4"
pytest = "^7.1.2"
isort = "6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
